# scpcb

./: .gitattributes  .gitignore  .gitmodules  173blitz3D.ipf  Achievements.bb  Array.bb  Array2D.bb  Assets.bb  Audio.bb  CMakeLists.txt  Changelog.txt  Console.bb  Converter.bb  Credits.txt  Difficulty.bb  Doors.bb  Dreamfilter.bb  EntryPoint.bb  Events.bb  FastResize.bb  INI.bb  Instructions.txt  Items.bb  KeyName.bb  Launcher.bb  Main.bb  MapSystem.bb  MarkedForRemoval.bb  MathUtils.bb  Menu.bb  NPCs.bb  Options.bb  Particles.bb  Player.bb  README.md  RM2.bb  RMesh to RM2.bb  ReadMe.txt  SCPCB.sln  Save.bb  (+4 more)
BuildShaders/: CMakeLists.txt
Src/: CMakeLists.txt  GameMain.cpp  Main.cpp
Src/AssetMgmt/: Audio.cpp  TextMgmt.cpp
Src/Collision/: Collider.cpp  Collider.h  Collision.cpp  Collision.h  CollisionMesh.cpp  CollisionMesh.h  CollisionMeshCollection.cpp  CollisionMeshCollection.h
Src/Config/: Difficulty.cpp  INI.cpp
Src/Engine/bbruntime/: bbaudio.cpp  bbbank.cpp  bbsockets.cpp  bbsys.h  std.h
Src/Engine/blitz3d/: blitz3d.vcxproj  collision.cpp  md2model.cpp  object.cpp  q3bspmodel.cpp  q3bspmodel.h  q3bsprep.cpp
Src/Engine/gxruntime/: StringType.cpp  StringType.h  gxaudio.h  gxcanvas.h  gxfilesystem.cpp  gxfilesystem.h  gxgraphics.cpp  gxruntime.cpp  gxsound.cpp  std.h
Src/Engine/stdutil/: stdutil.vcxproj
Src/GUI/: GUI.cpp  GUI.h  GUIButton.cpp  GUIButton.h  UIAssets.h
Src/Graphics/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  DebugGraphics.cpp  DebugGraphics.h  Font.cpp  Font.h  GfxResManager.cpp  GfxResManager.h  GraphicsResources.cpp  GraphicsResources.h  Model.cpp  Model.h  ModelImageGenerator.cpp  ModelImageGenerator.h  Sprite.cpp  Sprite.h  UIMesh.cpp  UIMesh.h
Src/Input/: Binding.cpp  Binding.h  Input.cpp  Input.h  KeyBinds.cpp  KeyBinds.h  MouseData.cpp  MouseData.h
Src/Items/: GasMask.cpp  GasMask.h  Gasmask.cpp  Gasmask.h  InvSlot.cpp  InvSlot.h  Inventory.cpp  Item.cpp  Item.h  Radio.cpp
Src/Libraries/bbruntime/: basic.cpp  bbaudio.cpp  bbaudio.h  bbbank.cpp  bbbank.h  bbblitz3d.cpp  bbblitz3d.h  bbfilesystem.cpp  bbfilesystem.h  bbgraphics.cpp  bbgraphics.h  bbinput.cpp  bbmath.cpp  bbmath.h  bbruntime.cpp  bbruntime.h  bbruntime.vcxproj  bbsockets.cpp  bbstream.cpp  bbstream.h  bbstring.cpp  bbstring.h  bbsys.cpp  bbsys.h  resource.h  std.h
Src/Libraries/blitz3d/: animation.cpp  animator.cpp  animator.h  blitz3d.vcxproj  brush.cpp  brush.h  cachedtexture.cpp  cachedtexture.h  camera.cpp  camera.h  collision.cpp  geom.h  light.h  listener.cpp  listener.h  loader_3ds.cpp  loader_3ds.h  loader_b3d.cpp  loader_b3d.h  md2model.h  md2rep.cpp  md2rep.h  meshcollider.cpp  meshcollider.h  meshloader.cpp  meshloader.h  meshmodel.cpp  meshmodel.h  mirror.cpp  mirror.h  model.cpp  model.h  object.cpp  object.h  pivot.h  planemodel.cpp  planemodel.h  q3bspmodel.h  q3bsprep.h  sprite.cpp  (+11 more)
Src/Libraries/freeimage/: FreeImage.h  Quantizers.h
Src/Libraries/gxruntime/: StringType.cpp  StringType.h  ddutil.cpp  ddutil.h  gxaudio.cpp  gxcanvas.cpp  gxdir.h  (+21 more)
Src/Map/: Decals.cpp  Doors.cpp  MapSystem.cpp  Objects.h  Particles.h
Src/MathUtils/: MathUtils.cpp
Src/Menus/: Console.cpp  Console.h  InvSlot.cpp  InvSlot.h  Inventory.cpp  Inventory.h  Launcher.cpp  Launcher.h  LoadingScreen.cpp  LoadingScreen.h  Menu.cpp  Menu.h  PauseMenu.cpp  PauseMenu.h  UIAssets.cpp  UIAssets.h
Src/MiscGFX/: Dreamfilter.cpp  FastResize.cpp
Src/Model/: Model.cpp  Model.h
Src/Models/: CBR.cpp  CBR.h  Generic.cpp  Generic.h  Model.cpp  Model.h  RM2.cpp  RM2.h
Src/NPCs/: NPCtype049.cpp  NPCtype049.h  NPCtype066.cpp  NPCtype096.h  NPCtype106.cpp  NPCtype966.cpp  NPCtypeApache.cpp  NPCtypeGuard.cpp  NPCtypeMTF.cpp
Src/Player/: Player.cpp
Src/PlayerController/: PlayerController.cpp  PlayerController.h
Src/Rooms_old/: Room_cont_012_2.cpp  Room_cont_035_1.cpp  Room_cont_035_1.h  Room_cont_049_2.cpp  Room_cont_106_1.cpp  Room_cont_173_1.h  Room_cont_205_1.cpp  Room_cont_500_1499_2.h  Room_cont_895_1.cpp  Room_cont_895_1.h  Room_end_1.cpp  Room_exit_gatea_1.h  Room_hll_bench_3.cpp  Room_hll_caf_2.h  Room_hll_ele_2.cpp  Room_lck_096_2c.cpp  Room_lck_cam_2c.cpp  Room_lck_ez_3.h  Room_lck_tshape_2.cpp  Room_off_rosewood_2.cpp  Room_srvr_farm_3.cpp  Room_strg_elec_2c.cpp  Room_test_smallwindow_2.h  Room_tnnl_maintenance_2.cpp  Room_tnnl_plain_2.cpp  Room_tnnl_plain_2.h  Room_tnnl_plain_3.cpp
Src/RuntimeTest/: Main.cpp  RuntimeTest.aps  RuntimeTest.rc  RuntimeTest.vcxproj  RuntimeTest.vcxproj.filters  resource.h
Src/SCPCB/: ConsoleCommands.cpp  Main.cpp  SCPCB.rc  SCPCB.vcxproj  SCPCB.vcxproj.filters  resource.h
Src/Save/: Config.cpp  Config.h  ConfigValues.cpp  ConfigValues.h
Src/Scripting/: CachedArgument.cpp  CachedArgument.h  Class.cpp  Class.h  Function.cpp  Function.h  NativeDefinition.cpp  NativeDefinition.h  NativeFunction.cpp  Object.cpp  Object.h  RefCounter.cpp  RefCounter.h  Script.cpp  Script.h  ScriptClass.cpp  ScriptClass.h  ScriptFunction.cpp  ScriptFunction.h  ScriptGlobal.cpp  ScriptGlobal.h  ScriptManager.cpp  ScriptManager.h  ScriptModule.cpp  ScriptModule.h  ScriptObject.cpp  ScriptObject.h  ScriptUtils.h  StringFactory.cpp  StringFactory.h  Type.cpp  Type.h
Src/Serialize/: IntProperty.cpp  IntProperty.h  ScriptSerializer.cpp  ScriptSerializer.h  XMLProperty.cpp  XMLProperty.h
Src/Utils/: FPSManager.cpp  FPSManager.h  FileUtil.cpp  FileUtil.h  INI.cpp  INI.h  LocalizationManager.cpp  LocalizationManager.h  MathUtil.cpp  MathUtil.h  MessageManager.cpp  MessageManager.h  ResourcePack.cpp  ResourcePack.h  ResourcePackManager.cpp  ResourcePackManager.h  TextMgmt.cpp  TextMgmt.h  TextureUtil.cpp  TextureUtil.h
Src/World/: DataInterpolator.cpp  DataInterpolator.h  FPSCounter.cpp  FPSCounter.h  Item.cpp  Item.h  Pickable.cpp  Pickable.h  ScriptWorld.cpp  ScriptWorld.h  ShaderManager.cpp  ShaderManager.h  Timing.cpp  Timing.h  VRManager.cpp  VRManager.h  World.cpp  World.h
Src/Wrap/: Graphics.cpp  Graphics.h  IO.cpp  IO.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThreadManager.cpp  ThreadManager.h
(+1904 files in other folders)
